--- a/package.json
+++ b/package.json
@@ -11,12 +11,20 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/config": "^0.0.41",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/helmet": "^4.0.0",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.21",
     "typescript": "^4.6.2"
   },
   "dependencies": {
+    "config": "^3.3.7",
+    "cors": "^2.8.5",
     "express": "^4.17.3",
+    "helmet": "^5.0.2",
+    "morgan": "^1.10.0",
     "pg": "^8.7.3",
     "typeorm": "^0.3.0"
   }
