--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "tsc && node dist/app.js",
-    "build": "tsc"
+    "build": "tsc",
+    "dev": "tsc && nodemon dist/app.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "@types/helmet": "^4.0.0",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.21",
+    "nodemon": "^2.0.15",
     "typescript": "^4.6.2"
   },
   "dependencies": {
