--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "morgan": "^1.10.0",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
+    "ts-node-dev": "^1.1.8",
     "typeorm": "^0.3.0"
   }
 }
